[metadata]
name = nagare-services-database-pony
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Pony ORM service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-database-pony
    Tracker = https://github.com/nagareproject/services-database-pony/issues

[options]
zip_safe = False
packages = find:
install_requires =
    pony
    nagare-services-transaction
    nagare-server

[options.entry_points]
nagare.commands =
    pony = nagare.admin.pony:Commands

nagare.commands.pony =
    create = nagare.admin.pony:Create
    drop = nagare.admin.pony:Drop

nagare.services =
    pony = nagare.services.pony:Pony

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
